# TMScripts

./: .gitattributes  .gitignore  README.md
TM.NET/: TM.NET.sln
TM.NET/CubeBuilder/: CubeBuilder.csproj  Program.cs
TM.NET/CubeBuilder/Assets/: PlasticCube.Item.Gbx  PlasticCubeDyna.Item.Gbx
TM.NET/ItemCreator/: App.xaml  App.xaml.cs  ItemCreator.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
TM.NET/ItemCreator/Activation/: ActivationHandler.cs  DefaultActivationHandler.cs  IActivationHandler.cs
TM.NET/ItemCreator/Contracts/Services/: IActivationService.cs  INavigationService.cs  IPageService.cs
TM.NET/ItemCreator/Contracts/ViewModels/: INavigationAware.cs
TM.NET/ItemCreator/Helpers/: FrameExtensions.cs  ResourceExtensions.cs  RuntimeHelper.cs  TitleBarHelper.cs
TM.NET/ItemCreator/Models/: Animation.cs
TM.NET/ItemCreator/Properties/: launchSettings.json
TM.NET/ItemCreator/Services/: ActivationService.cs  NavigationService.cs  PageService.cs
TM.NET/ItemCreator/Strings/en-us/: Resources.resw
TM.NET/ItemCreator/ViewModels/: MainViewModel.cs
TM.NET/ItemCreator/Views/: MainPage.xaml  MainPage.xaml.cs
tmx_downloader/: Makefile  README.md  pyproject.toml
tmx_downloader/tmx_downloader/: __main__.py
tmx_downloader/tmx_downloader/tmx/: __init__.py  api.py  models.py
